--- a/after/css/style.css
+++ b/after/css/style.css
@@ -2,5 +2,5 @@ body {
     font-size: 16px;
     color: #fff;
     background-color: #61122f;
-    font-family: Oxygen , sans-serif;
+    font-family: 'Oxygen', sans-serif;
 }
