--- a/after/css/style.css
+++ b/after/css/style.css
@@ -13,7 +13,7 @@ body {
 }
 
 #logo-img {
-    background: url('../images/restaurant-logo_large.png') no-repeat;
+    background: url(https://usmile581.github.io/Bistro_Restaurant/images/restaurant-logo_large.png) no-repeat;
     width: 150px;
     height: 150px;
     margin: 10px 15px 10px 0;
