--- a/after/css/style.css
+++ b/after/css/style.css
@@ -19,7 +19,7 @@ body {
     margin: 10px 15px 10px 0;
 }
 
-navbar-brand {
+.navbar-brand {
     padding-top:  25px;
 }
 
@@ -35,7 +35,7 @@ navbar-brand {
     line-height: .75;
 }
 
-.navbar-brand P a:hover, .navbar-brand a:focus {
+.navbar-brand a:hover, .navbar-brand a:focus {
     text-decoration: none;
 }
 
