--- a/after/css/style.css
+++ b/after/css/style.css
@@ -50,3 +50,22 @@ body {
 .navbar-brand p span { /* Star-K */
     vertical-align: middle;
 }
+
+
+/************************Large devices only ************************/
+@media (min-width: 1200px){
+
+}
+
+/***********************Medium devices only ***********************/
+@media (min-width: 768px) and (max-width: 1199px)
+/* Header */
+    #logo-img {
+        background: url('https://usmile581.github.io/Bistro_Restaurant/images/restaurant-logo_medium.png') no-repeat;
+        width: 100px;
+        height: 100px;
+        margin: 5px 5px 5px 0;
+    }
+    /* End Header */
+}
+
