--- a/after/css/style.css
+++ b/after/css/style.css
@@ -57,15 +57,33 @@ body {
 
 }
 
-/***********************Medium devices only ***********************/
-@media (min-width: 768px) and (max-width: 1199px)
-/* Header */
+
+/********** Medium devices only **********/
+@media (min-width: 992px) and (max-width: 1199px) {
+    /* Header */
     #logo-img {
-        background: url('https://usmile581.github.io/Bistro_Restaurant/images/restaurant-logo_medium.png') no-repeat;
-        width: 100px;
-        height: 100px;
-        margin: 5px 5px 5px 0;
+      background: url('https://usmile581.github.io/Bistro_Restaurant/images/restaurant-logo_medium.png') no-repeat;
+      width: 100px;
+      height: 100px;
+      margin: 5px 5px 5px 0;
     }
     /* End Header */
-}
 
+/********** Extra small devices only **********/
+@media (max-width: 767px) {
+    /* Header */
+    .navbar-brand {
+      padding-top: 10px;
+      height: 80px;
+    }
+    .navbar-brand h1 { /* Restaurant name */
+      padding-top: 10px;
+      font-size: 5vw; /* 1vw = 1% of viewport width */
+    }
+    .navbar-brand p { /* Kosher cert */
+      font-size: .6em;
+      margin-top: 12px;
+    }
+    .navbar-brand p img { /* Star-K */
+      height: 20px;
+    }
