--- a/after/css/style.css
+++ b/after/css/style.css
@@ -69,6 +69,12 @@ body {
     }
     /* End Header */
 
+/***************** Small devices only ****************/
+@media (min-width: 768px) and (max-width: 991px) {
+
+}
+
+
 /********** Extra small devices only **********/
 @media (max-width: 767px) {
     /* Header */
